[package]
name = "webcipher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# jwt decryption / verification
jsonwebtoken = "8.1.0"

# serialization / deserialization
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.79"

chrono = "0.4.11"
hyper = { version = "0.14", features = ["full"] }
http = "0.2.7"
hyper-tls = "0.5.0"
tokio = { version = "1.18.0", features = ["full"] }

# partial derivations
derivative = "2.2.0"

# universally unique identifiers
uuid = { version = "0.8.2", features = ["v4", "serde"] }
