[package]
name = "webcipher"
version = "0.1.0"
authors = [
    "Raunak Bhagat <rabhagat31@gmail.com>"
]
edition = "2021"
license = "MIT"
description = "JWT encryption/decryption algorithms + a JWK Store implementation (for caching and authentication/authorization optimizations)."
repository = "https://github.com/wavy-app/webcipher"
keywords = ["jwt", "jwks"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# jwt decryption / verification
jsonwebtoken = "8.1.0"

# serialization / deserialization
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.79"

# network request operations
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"

# http utilities
http = "0.2.7"
http-serde = "1.1.0"

# async runtime
tokio = { version = "1.18.0", features = ["full"] }

# partial derivations
derivative = "2.2.0"

# universally unique identifiers
uuid = { version = "0.8.2", features = ["v4", "serde"] }

# time utilities + primitives
chrono = "0.4.19"
